# kent

./: .gitignore  Dockerfile  HISTORY.rst  MANIFEST.in  Makefile  README.rst  justfile  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml  main.yml
src/kent/: __init__.py  app.py  cli.py  cli_server.py  cli_testpost.py  oldapp.py  utils.py
src/kent/static/: style.css
src/kent/templates/: index.html  success.html
tests/: test_app.py  test_utils.py
